[gd_scene load_steps=14 format=3 uid="uid://c8kphg1nj5or7"]

[ext_resource type="Script" path="res://Main.gd" id="1_n8lqm"]
[ext_resource type="PackedScene" uid="uid://bg24oecj33abg" path="res://Guillotine.tscn" id="2_om8ll"]
[ext_resource type="Script" path="res://PlayerStartPosition.gd" id="3_k8q0v"]
[ext_resource type="TileSet" uid="uid://jfi3c55fejp7" path="res://assets/tiles/game_tileset.tres" id="4_yrs5p"]
[ext_resource type="PackedScene" uid="uid://cdrot7rgcrda" path="res://Elevator/elevatorhori.tscn" id="5_7c6rg"]
[ext_resource type="PackedScene" uid="uid://cfhky1m0eb02f" path="res://Elevator/elevator.tscn" id="8_7wuc2"]
[ext_resource type="PackedScene" uid="uid://bq4vko2mnunm6" path="res://Rope/corde_jaune2.tscn" id="11_aiq7b"]
[ext_resource type="PackedScene" uid="uid://b33isdd6wsftd" path="res://Rope/corde_bleu.tscn" id="13_70iun"]
[ext_resource type="PackedScene" uid="uid://dfg7t13hak38a" path="res://chkpt.tscn" id="15_y23jr"]
[ext_resource type="PackedScene" uid="uid://cipi2editgqqx" path="res://Player.tscn" id="17_2v53c"]
[ext_resource type="AudioStream" uid="uid://cuk82s8pb5s0o" path="res://assets/sounds/chara_jumping.wav" id="18_wlw1h"]
[ext_resource type="AudioStream" uid="uid://b04iqcqnsnrpe" path="res://assets/sounds/player_dies.wav" id="19_j1ibn"]
[ext_resource type="PackedScene" uid="uid://ccq8p66j6i857" path="res://Menu/credit.tscn" id="21_mws3c"]

[node name="level_2" type="Node"]
script = ExtResource("1_n8lqm")

[node name="Guillotine" parent="." instance=ExtResource("2_om8ll")]
visible = false

[node name="PlayerStartPosition" type="Marker2D" parent="."]
position = Vector2(1207, 294)
script = ExtResource("3_k8q0v")

[node name="GuillotineStartPosition" type="Marker2D" parent="."]
position = Vector2(300, 200)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("4_yrs5p")
format = 2
layer_0/tile_data = PackedInt32Array(2555905, 131072, 1, 2555906, 131072, 1, 2555907, 131072, 1, 2555904, 131072, 1, 2621439, 131072, 1, 2686975, 131072, 2, 2621440, 131072, 2, 2621441, 131072, 2, 2621442, 131072, 2, 2621443, 131072, 2, 2752511, 131072, 2, 2686976, 131072, 2, 2686977, 131072, 2, 2686978, 131072, 2, 2686979, 131072, 2, 2555908, 131072, 1, 2621444, 131072, 2, 2686980, 131072, 2, 2424847, 65536, 0, 2424848, 131072, 0, 2424849, 196608, 0, 2818053, 65536, 3, 2818054, 65536, 3, 2818055, 65536, 3, 2818056, 65536, 3, 2818057, 65536, 3, 2818058, 65536, 3, 2818059, 65536, 3, 2818060, 65536, 3, 2818061, 65536, 3, 2818062, 65536, 3, 2818063, 65536, 3, 2818064, 65536, 3, 2818065, 65536, 3, 2818066, 65536, 3, 2818067, 65536, 3, 2818068, 65536, 3, 2818069, 65536, 3, 2621438, 131072, 1, 2621437, 131072, 1, 2621436, 131072, 1, 2686974, 131072, 2, 2686973, 131072, 2, 2686972, 131072, 2, 2752508, 131072, 2, 2752509, 131072, 2, 2752510, 131072, 2, 2818070, 65536, 3, 2818071, 65536, 3, 2818072, 65536, 3, 2818073, 65536, 3, 2883610, 65536, 3, 2883611, 65536, 3, 2883612, 65536, 3, 2883613, 65536, 3, 2883614, 65536, 3, 2883615, 65536, 3, 2883616, 65536, 3, 2883617, 65536, 3, 2883618, 65536, 3, 2883619, 65536, 3, 2818084, 65536, 3, 2818085, 65536, 3, 2818086, 65536, 3, 2818087, 65536, 3, 2818088, 65536, 3, 2818089, 65536, 3, 2818090, 65536, 3, 2818091, 65536, 3, 2818092, 65536, 3, 2818093, 65536, 3, 2818094, 65536, 3, 2883631, 65536, 3, 2883632, 65536, 3, 2883633, 65536, 4, 2883634, 65536, 4, 2883635, 65536, 4, 2883636, 65536, 4, 2883637, 65536, 4, 2883638, 65536, 4, 2883639, 65536, 4, 2883640, 65536, 4, 2883641, 65536, 4, 2883642, 65536, 4, 2883643, 65536, 4, 2883644, 65536, 4, 2883645, 65536, 4, 2883646, 65536, 4, 2097198, 65536, 0, 2097199, 196608, 0, 1966129, 65536, 3, 2031665, 65536, 4, 2097201, 65536, 4, 2162737, 65536, 4, 2228273, 65536, 4, 2293809, 65536, 4, 1966135, 65536, 0, 1966136, 131072, 0, 1966137, 196608, 0, 1703995, 65536, 4, 1769531, 65536, 4, 1835067, 65536, 4, 1900603, 65536, 4, 1966139, 65536, 4, 2031675, 65536, 4, 2097211, 65536, 4, 2162747, 65536, 4, 1245254, 131072, 1, 1245255, 131072, 1, 1245256, 131072, 1, 1245257, 131072, 1, 1245258, 131072, 1, 1245259, 131072, 1, 1245260, 131072, 1, 1245261, 131072, 1, 1245262, 131072, 1, 2293810, 65536, 3, 2293811, 65536, 3, 2293812, 65536, 3, 2293813, 65536, 3, 2293814, 65536, 3, 1638459, 65536, 4, 2359345, 65536, 4, 2621489, 65536, 4, 2687025, 65536, 4, 2752561, 65536, 4, 2818097, 65536, 4, 2687031, 65536, 3, 2687032, 65536, 3, 2687033, 65536, 3, 2687034, 65536, 3, 2687035, 65536, 3, 2687036, 65536, 3, 2687037, 65536, 3, 2687038, 65536, 3, 2687039, 65536, 3, 2687030, 65536, 4, 2621494, 65536, 4, 2359349, 65536, 4, 2359350, 65536, 4, 2621493, 65536, 4, 2687029, 65536, 4, 2687028, 65536, 4, 2687027, 65536, 4, 2687026, 65536, 4, 2621490, 65536, 4, 2621491, 65536, 4, 2621492, 65536, 4, 2359346, 65536, 4, 2359347, 65536, 4, 2359348, 65536, 4, 2752562, 65536, 4, 2752563, 65536, 4, 2752564, 65536, 4, 2752565, 65536, 4, 2752566, 65536, 4, 2752567, 65536, 4, 2752568, 65536, 4, 2752569, 65536, 4, 2752570, 65536, 4, 2752571, 65536, 4, 2752572, 65536, 4, 2752573, 65536, 4, 2752574, 65536, 4, 2752575, 65536, 4, 2818111, 65536, 4, 2883647, 65536, 4, 2818110, 65536, 4, 2818109, 65536, 4, 2818108, 65536, 4, 2818107, 65536, 4, 2818106, 65536, 4, 2818105, 65536, 4, 2818104, 65536, 4, 2818103, 65536, 4, 2818102, 65536, 4, 2818101, 65536, 4, 2818100, 65536, 4, 2818099, 65536, 4, 2818098, 65536, 4, 2949183, 65536, 4, 2949182, 65536, 4, 2949181, 65536, 4, 2949180, 65536, 4, 2949179, 65536, 4, 2949178, 65536, 4, 2949177, 65536, 4, 2949176, 65536, 4, 2949175, 65536, 4, 2949174, 65536, 4, 2949173, 65536, 4, 2949172, 65536, 4, 2949171, 65536, 4, 2949170, 65536, 4, 2949169, 65536, 4, 2949168, 65536, 4, 2949167, 65536, 4, 2949166, 65536, 4, 2949165, 65536, 4, 2949164, 65536, 4, 2949163, 65536, 4, 2949162, 65536, 4, 2949161, 65536, 4, 2949160, 65536, 4, 2949159, 65536, 4, 2949158, 65536, 4, 2949157, 65536, 4, 2949156, 65536, 4, 2949155, 65536, 4, 2949154, 65536, 4, 2949153, 65536, 4, 2949152, 65536, 4, 2949151, 65536, 4, 2949150, 65536, 4, 2949149, 65536, 4, 2949148, 65536, 4, 2949147, 65536, 4, 2949146, 65536, 4, 2949145, 65536, 4, 2949144, 65536, 4, 2949143, 65536, 4, 2949142, 65536, 4, 2949141, 65536, 4, 2949140, 65536, 4, 2949139, 65536, 4, 3014675, 65536, 4, 2949138, 65536, 4, 2949137, 65536, 4, 2949136, 65536, 4, 2949135, 65536, 4, 2949134, 65536, 4, 2949133, 65536, 4, 2949132, 65536, 4, 2949131, 65536, 4, 2949130, 65536, 4, 2949129, 65536, 4, 2949128, 65536, 4, 2949127, 65536, 4, 2949126, 65536, 4, 2949125, 65536, 4, 2949124, 131072, 2, 2949123, 131072, 2, 2949122, 131072, 2, 3014658, 131072, 2, 3080194, 131072, 2, 3145730, 131072, 2, 3014659, 131072, 2, 3080195, 131072, 2, 3145731, 131072, 2, 3014660, 131072, 2, 3080196, 131072, 2, 3145732, 131072, 2, 3014661, 65536, 4, 3080197, 65536, 4, 3145733, 65536, 4, 3014662, 65536, 4, 3080198, 65536, 4, 3145734, 65536, 4, 3014663, 65536, 4, 3080199, 65536, 4, 3145735, 65536, 4, 3014664, 65536, 4, 3080200, 65536, 4, 3145736, 65536, 4, 3014665, 65536, 4, 3080201, 65536, 4, 3145737, 65536, 4, 3014666, 65536, 4, 3080202, 65536, 4, 3145738, 65536, 4, 3014667, 65536, 4, 3080203, 65536, 4, 3145739, 65536, 4, 3014668, 65536, 4, 3080204, 65536, 4, 3145740, 65536, 4, 3014669, 65536, 4, 3080205, 65536, 4, 3145741, 65536, 4, 3014670, 65536, 4, 3080206, 65536, 4, 3145742, 65536, 4, 3014671, 65536, 4, 3080207, 65536, 4, 3145743, 65536, 4, 3014672, 65536, 4, 3080208, 65536, 4, 3145744, 65536, 4, 3014673, 65536, 4, 3080209, 65536, 4, 3145745, 65536, 4, 3014674, 65536, 4, 3080210, 65536, 4, 3145746, 65536, 4, 3080211, 65536, 4, 3145747, 65536, 4, 3014676, 65536, 4, 3080212, 65536, 4, 3145748, 65536, 4, 3014677, 65536, 4, 3080213, 65536, 4, 3145749, 65536, 4, 3014678, 65536, 4, 3080214, 65536, 4, 3145750, 65536, 4, 3014679, 65536, 4, 3080215, 65536, 4, 3145751, 65536, 4, 3014680, 65536, 4, 3080216, 65536, 4, 3145752, 65536, 4, 3014681, 65536, 4, 3080217, 65536, 4, 3145753, 65536, 4, 3014682, 65536, 4, 3080218, 65536, 4, 3145754, 65536, 4, 3014683, 65536, 4, 3080219, 65536, 4, 3145755, 65536, 4, 3014684, 65536, 4, 3080220, 65536, 4, 3145756, 65536, 4, 3014685, 65536, 4, 3080221, 65536, 4, 3145757, 65536, 4, 3014686, 65536, 4, 3080222, 65536, 4, 3145758, 65536, 4, 3014687, 65536, 4, 3080223, 65536, 4, 3145759, 65536, 4, 3014688, 65536, 4, 3080224, 65536, 4, 3145760, 65536, 4, 3014689, 65536, 4, 3080225, 65536, 4, 3145761, 65536, 4, 3014690, 65536, 4, 3080226, 65536, 4, 3145762, 65536, 4, 3014691, 65536, 4, 3080227, 65536, 4, 3145763, 65536, 4, 3014692, 65536, 4, 3080228, 65536, 4, 3145764, 65536, 4, 3014693, 65536, 4, 3080229, 65536, 4, 3145765, 65536, 4, 3014694, 65536, 4, 3080230, 65536, 4, 3145766, 65536, 4, 3014695, 65536, 4, 3080231, 65536, 4, 3145767, 65536, 4, 3014696, 65536, 4, 3080232, 65536, 4, 3145768, 65536, 4, 3014697, 65536, 4, 3080233, 65536, 4, 3145769, 65536, 4, 3014698, 65536, 4, 3080234, 65536, 4, 3145770, 65536, 4, 3014699, 65536, 4, 3080235, 65536, 4, 3145771, 65536, 4, 3014700, 65536, 4, 3080236, 65536, 4, 3145772, 65536, 4, 3014701, 65536, 4, 3080237, 65536, 4, 3145773, 65536, 4, 3014702, 65536, 4, 3080238, 65536, 4, 3145774, 65536, 4, 3014703, 65536, 4, 3080239, 65536, 4, 3145775, 65536, 4, 3014704, 65536, 4, 3080240, 65536, 4, 3145776, 65536, 4, 3014705, 65536, 4, 3080241, 65536, 4, 3145777, 65536, 4, 3014706, 65536, 4, 3080242, 65536, 4, 3145778, 65536, 4, 3014707, 65536, 4, 3080243, 65536, 4, 3145779, 65536, 4, 3014708, 65536, 4, 3080244, 65536, 4, 3145780, 65536, 4, 3014709, 65536, 4, 3080245, 65536, 4, 3145781, 65536, 4, 3014710, 65536, 4, 3080246, 65536, 4, 3145782, 65536, 4, 3014711, 65536, 4, 3080247, 65536, 4, 3145783, 65536, 4, 3014712, 65536, 4, 3080248, 65536, 4, 3145784, 65536, 4, 3014713, 65536, 4, 3080249, 65536, 4, 3145785, 65536, 4, 3014714, 65536, 4, 3080250, 65536, 4, 3145786, 65536, 4, 3014715, 65536, 4, 3080251, 65536, 4, 3145787, 65536, 4, 3014716, 65536, 4, 3080252, 65536, 4, 3145788, 65536, 4, 3014717, 65536, 4, 3080253, 65536, 4, 3145789, 65536, 4, 3014718, 65536, 4, 3080254, 65536, 4, 3145790, 65536, 4, 3014719, 65536, 4, 3080255, 65536, 4, 3145791, 65536, 4, 2883586, 131072, 2, 2883587, 131072, 2, 2883588, 131072, 2, 2883589, 65536, 4, 2883590, 65536, 4, 2883591, 65536, 4, 2883592, 65536, 4, 2883593, 65536, 4, 2883594, 65536, 4, 2883595, 65536, 4, 2883596, 65536, 4, 2883597, 65536, 4, 2883598, 65536, 4, 2883599, 65536, 4, 2883600, 65536, 4, 2883601, 65536, 4, 2883602, 65536, 4, 2883603, 65536, 4, 2883604, 65536, 4, 2883605, 65536, 4, 2883606, 65536, 4, 2883607, 65536, 4, 2883608, 65536, 4, 2883609, 65536, 4, 2883620, 65536, 4, 2883621, 65536, 4, 2883622, 65536, 4, 2883623, 65536, 4, 2883624, 65536, 4, 2883625, 65536, 4, 2883626, 65536, 4, 2883627, 65536, 4, 2883628, 65536, 4, 2883629, 65536, 4, 2883630, 65536, 4, 2818044, 131072, 2, 2883580, 131072, 2, 2949116, 131072, 2, 3014652, 131072, 2, 3080188, 131072, 2, 3145724, 131072, 2, 3211260, 131072, 2, 2818045, 131072, 2, 2883581, 131072, 2, 2949117, 131072, 2, 3014653, 131072, 2, 3080189, 131072, 2, 3145725, 131072, 2, 3211261, 131072, 2, 2818046, 131072, 2, 2883582, 131072, 2, 2949118, 131072, 2, 3014654, 131072, 2, 3080190, 131072, 2, 3145726, 131072, 2, 3211262, 131072, 2, 2818047, 131072, 2, 2883583, 131072, 2, 2949119, 131072, 2, 3014655, 131072, 2, 3080191, 131072, 2, 3145727, 131072, 2, 3211263, 131072, 2, 2752512, 131072, 2, 2818048, 131072, 2, 2883584, 131072, 2, 2949120, 131072, 2, 3014656, 131072, 2, 3080192, 131072, 2, 3145728, 131072, 2, 2752513, 131072, 2, 2818049, 131072, 2, 2883585, 131072, 2, 2949121, 131072, 2, 3014657, 131072, 2, 3080193, 131072, 2, 3145729, 131072, 2, 2752514, 131072, 2, 2818050, 131072, 2, 2752515, 131072, 2, 2818051, 131072, 2, 2752516, 131072, 2, 2818052, 131072, 2, 1310708, 327680, 2, 1376244, 327680, 2, 1441780, 327680, 2, 1507316, 327680, 2, 1572852, 327680, 2, 1638388, 327680, 2, 1703924, 327680, 2, 1769460, 327680, 2, 1834996, 327680, 2, 1900532, 327680, 2, 1966068, 327680, 2, 2031604, 327680, 2, 2097140, 327680, 2, 2162676, 327680, 2, 2228212, 327680, 2, 2293748, 327680, 2, 2359284, 327680, 2, 2424820, 327680, 2, 2490356, 327680, 2, 2555892, 327680, 2, 2621428, 327680, 2, 2686964, 327680, 2, 2752500, 327680, 2, 2818036, 327680, 2, 2883572, 327680, 2, 2949108, 327680, 2, 3014644, 327680, 2, 3080180, 327680, 2, 3145716, 327680, 2, 3211252, 327680, 2, 1310709, 327680, 2, 1376245, 327680, 2, 1441781, 327680, 2, 1507317, 327680, 2, 1572853, 327680, 2, 1638389, 327680, 2, 1703925, 327680, 2, 1769461, 327680, 2, 1834997, 327680, 2, 1900533, 327680, 2, 1966069, 327680, 2, 2031605, 327680, 2, 2097141, 327680, 2, 2162677, 327680, 2, 2228213, 327680, 2, 2293749, 327680, 2, 2359285, 327680, 2, 2424821, 327680, 2, 2490357, 327680, 2, 2555893, 327680, 2, 2621429, 327680, 2, 2686965, 327680, 2, 2752501, 327680, 2, 2818037, 327680, 2, 2883573, 327680, 2, 2949109, 327680, 2, 3014645, 327680, 2, 3080181, 327680, 2, 3145717, 327680, 2, 3211253, 327680, 2, 1310710, 327680, 2, 1376246, 327680, 2, 1441782, 327680, 2, 1507318, 327680, 2, 1572854, 327680, 2, 1638390, 327680, 2, 1703926, 327680, 2, 1769462, 327680, 2, 1834998, 327680, 2, 1900534, 327680, 2, 1966070, 327680, 2, 2031606, 327680, 2, 2097142, 327680, 2, 2162678, 327680, 2, 2228214, 327680, 2, 2293750, 327680, 2, 2359286, 327680, 2, 2424822, 327680, 2, 2490358, 327680, 2, 2555894, 327680, 2, 2621430, 327680, 2, 2686966, 327680, 2, 2752502, 327680, 2, 2818038, 327680, 2, 2883574, 327680, 2, 2949110, 327680, 2, 3014646, 327680, 2, 3080182, 327680, 2, 3145718, 327680, 2, 3211254, 327680, 2, 1310711, 327680, 2, 1376247, 327680, 2, 1441783, 327680, 2, 1507319, 327680, 2, 1572855, 327680, 2, 1638391, 327680, 2, 1703927, 327680, 2, 1769463, 327680, 2, 1834999, 327680, 2, 1900535, 327680, 2, 1966071, 327680, 2, 2031607, 327680, 2, 2097143, 327680, 2, 2162679, 327680, 2, 2228215, 327680, 2, 2293751, 327680, 2, 2359287, 327680, 2, 2424823, 327680, 2, 2490359, 327680, 2, 2555895, 327680, 2, 2621431, 327680, 2, 2686967, 327680, 2, 2752503, 327680, 2, 2818039, 327680, 2, 2883575, 327680, 2, 2949111, 327680, 2, 3014647, 327680, 2, 3080183, 327680, 2, 3145719, 327680, 2, 3211255, 327680, 2, 1310712, 327680, 2, 1376248, 327680, 2, 1441784, 327680, 2, 1507320, 327680, 2, 1572856, 327680, 2, 1638392, 327680, 2, 1703928, 327680, 2, 1769464, 327680, 2, 1835000, 327680, 2, 1900536, 327680, 2, 1966072, 327680, 2, 2031608, 327680, 2, 2097144, 327680, 2, 2162680, 327680, 2, 2228216, 327680, 2, 2293752, 327680, 2, 2359288, 327680, 2, 2424824, 327680, 2, 2490360, 327680, 2, 2555896, 327680, 2, 2621432, 327680, 2, 2686968, 327680, 2, 2752504, 327680, 2, 2818040, 327680, 2, 2883576, 327680, 2, 2949112, 327680, 2, 3014648, 327680, 2, 3080184, 327680, 2, 3145720, 327680, 2, 3211256, 327680, 2, 1310713, 327680, 2, 1376249, 327680, 2, 1441785, 327680, 2, 1507321, 327680, 2, 1572857, 327680, 2, 1638393, 327680, 2, 1703929, 327680, 2, 1769465, 327680, 2, 1835001, 327680, 2, 1900537, 327680, 2, 1966073, 327680, 2, 2031609, 327680, 2, 2097145, 327680, 2, 2162681, 327680, 2, 2228217, 327680, 2, 2293753, 327680, 2, 2359289, 327680, 2, 2424825, 327680, 2, 2490361, 327680, 2, 2555897, 327680, 2, 2621433, 327680, 2, 2686969, 327680, 2, 2752505, 327680, 2, 2818041, 327680, 2, 2883577, 327680, 2, 2949113, 327680, 2, 3014649, 327680, 2, 3080185, 327680, 2, 3145721, 327680, 2, 3211257, 327680, 2, 1310714, 327680, 2, 1376250, 327680, 2, 1441786, 327680, 2, 1507322, 327680, 2, 1572858, 327680, 2, 1638394, 327680, 2, 1703930, 327680, 2, 1769466, 327680, 2, 1835002, 327680, 2, 1900538, 327680, 2, 1966074, 327680, 2, 2031610, 327680, 2, 2097146, 327680, 2, 2162682, 327680, 2, 2228218, 327680, 2, 2293754, 327680, 2, 2359290, 327680, 2, 2424826, 327680, 2, 2490362, 327680, 2, 2555898, 327680, 2, 2621434, 327680, 2, 2686970, 327680, 2, 2752506, 327680, 2, 2818042, 327680, 2, 2883578, 327680, 2, 2949114, 327680, 2, 3014650, 327680, 2, 3080186, 327680, 2, 3145722, 327680, 2, 3211258, 327680, 2, 1310715, 327680, 2, 1376251, 327680, 2, 1441787, 327680, 2, 1507323, 327680, 2, 1572859, 327680, 2, 1638395, 327680, 2, 1703931, 327680, 2, 1769467, 327680, 2, 1835003, 327680, 2, 1900539, 327680, 2, 1966075, 327680, 2, 2031611, 327680, 2, 2097147, 327680, 2, 2162683, 327680, 2, 2228219, 327680, 2, 2293755, 327680, 2, 2359291, 327680, 2, 2424827, 327680, 2, 2490363, 327680, 2, 2555899, 327680, 2, 2621435, 327680, 2, 2686971, 327680, 2, 2752507, 327680, 2, 2818043, 327680, 2, 2883579, 327680, 2, 2949115, 327680, 2, 3014651, 327680, 2, 3080187, 327680, 2, 3145723, 327680, 2, 3211259, 327680, 2, 393241, 327680, 2, 458777, 327680, 2, 524313, 327680, 2, 589849, 327680, 2, 393242, 327680, 2, 458778, 327680, 2, 524314, 327680, 2, 589850, 327680, 2, 393243, 327680, 2, 458779, 327680, 2, 524315, 327680, 2, 589851, 327680, 2, 393244, 327680, 2, 458780, 327680, 2, 524316, 327680, 2, 589852, 327680, 2, 393245, 327680, 2, 458781, 327680, 2, 524317, 327680, 2, 589853, 327680, 2, 393246, 327680, 2, 458782, 327680, 2, 524318, 327680, 2, 589854, 327680, 2, 393247, 327680, 2, 458783, 327680, 2, 524319, 327680, 2, 589855, 327680, 2, 393248, 327680, 2, 458784, 327680, 2, 524320, 327680, 2, 589856, 327680, 2, 393249, 327680, 2, 458785, 327680, 2, 524321, 327680, 2, 589857, 327680, 2, 393250, 327680, 2, 458786, 327680, 2, 524322, 327680, 2, 589858, 327680, 2, 393251, 327680, 2, 458787, 327680, 2, 524323, 327680, 2, 589859, 327680, 2, 393252, 327680, 2, 458788, 327680, 2, 524324, 327680, 2, 589860, 327680, 2, 393253, 327680, 2, 458789, 327680, 2, 524325, 327680, 2, 589861, 327680, 2, 393254, 327680, 2, 458790, 327680, 2, 524326, 327680, 2, 589862, 327680, 2, 393255, 327680, 2, 458791, 327680, 2, 524327, 327680, 2, 589863, 327680, 2, 393256, 327680, 2, 458792, 327680, 2, 524328, 327680, 2, 589864, 327680, 2, 393257, 327680, 2, 458793, 327680, 2, 524329, 327680, 2, 589865, 327680, 2, 393258, 327680, 2, 458794, 327680, 2, 524330, 327680, 2, 589866, 327680, 2, 393259, 327680, 2, 458795, 327680, 2, 524331, 327680, 2, 589867, 327680, 2, 393260, 327680, 2, 458796, 327680, 2, 524332, 327680, 2, 589868, 327680, 2, 393261, 327680, 2, 458797, 327680, 2, 524333, 327680, 2, 589869, 327680, 2, 393262, 327680, 2, 458798, 327680, 2, 524334, 327680, 2, 589870, 327680, 2, 393263, 327680, 2, 458799, 327680, 2, 524335, 327680, 2, 589871, 327680, 2, 393264, 327680, 2, 458800, 327680, 2, 524336, 327680, 2, 589872, 327680, 2, 393265, 327680, 2, 458801, 327680, 2, 524337, 327680, 2, 589873, 327680, 2, 393266, 327680, 2, 458802, 327680, 2, 524338, 327680, 2, 589874, 327680, 2, 393267, 327680, 2, 458803, 327680, 2, 524339, 327680, 2, 589875, 327680, 2, 393268, 327680, 2, 458804, 327680, 2, 524340, 327680, 2, 589876, 327680, 2, 393269, 327680, 2, 458805, 327680, 2, 524341, 327680, 2, 589877, 327680, 2, 393270, 327680, 2, 458806, 327680, 2, 524342, 327680, 2, 589878, 327680, 2, 393271, 327680, 2, 458807, 327680, 2, 524343, 327680, 2, 589879, 327680, 2, 393272, 327680, 2, 458808, 327680, 2, 524344, 327680, 2, 589880, 327680, 2, 393273, 327680, 2, 458809, 327680, 2, 524345, 327680, 2, 589881, 327680, 2, 393274, 327680, 2, 458810, 327680, 2, 524346, 327680, 2, 589882, 327680, 2, 393275, 327680, 2, 458811, 327680, 2, 524347, 327680, 2, 589883, 327680, 2, 393276, 327680, 2, 458812, 327680, 2, 524348, 327680, 2, 589884, 327680, 2, 393277, 327680, 2, 458813, 327680, 2, 524349, 327680, 2, 589885, 327680, 2, 393278, 327680, 2, 458814, 327680, 2, 524350, 327680, 2, 589886, 327680, 2, 393279, 327680, 2, 458815, 327680, 2, 524351, 327680, 2, 589887, 327680, 2, 393280, 327680, 2, 458816, 327680, 2, 524352, 327680, 2, 589888, 327680, 2, 393281, 327680, 2, 458817, 327680, 2, 524353, 327680, 2, 589889, 327680, 2, 393282, 327680, 2, 458818, 327680, 2, 524354, 327680, 2, 589890, 327680, 2, 393283, 327680, 2, 458819, 327680, 2, 524355, 327680, 2, 589891, 327680, 2, 393284, 327680, 2, 458820, 327680, 2, 524356, 327680, 2, 589892, 327680, 2, 393285, 327680, 2, 458821, 327680, 2, 524357, 327680, 2, 589893, 327680, 2, 393286, 327680, 2, 458822, 327680, 2, 524358, 327680, 2, 589894, 327680, 2, 393287, 327680, 2, 458823, 327680, 2, 524359, 327680, 2, 589895, 327680, 2, 393288, 327680, 2, 458824, 327680, 2, 524360, 327680, 2, 589896, 327680, 2, 393289, 327680, 2, 458825, 327680, 2, 524361, 327680, 2, 589897, 327680, 2, 393290, 327680, 2, 458826, 327680, 2, 524362, 327680, 2, 589898, 327680, 2, 393291, 327680, 2, 458827, 327680, 2, 524363, 327680, 2, 589899, 327680, 2, 393292, 327680, 2, 458828, 327680, 2, 524364, 327680, 2, 589900, 327680, 2, 393293, 327680, 2, 458829, 327680, 2, 524365, 327680, 2, 589901, 327680, 2, 393294, 327680, 2, 458830, 327680, 2, 524366, 327680, 2, 589902, 327680, 2, 393295, 327680, 2, 458831, 327680, 2, 524367, 327680, 2, 589903, 327680, 2, 2555953, 65536, 3, 2555954, 65536, 3, 2555955, 65536, 3, 2555956, 65536, 3, 2555957, 65536, 3, 2555958, 65536, 3, 1441857, 65536, 0, 1441858, 196608, 0, 852055, 65536, 4, 589911, 65536, 4, 655447, 65536, 4, 720983, 65536, 4, 786519, 65536, 4, 917591, 65536, 4, 983127, 65536, 4, 393296, 327680, 2, 458832, 327680, 2, 524368, 327680, 2, 589904, 327680, 2, 393297, 327680, 2, 458833, 327680, 2, 524369, 327680, 2, 589905, 327680, 2, 393298, 327680, 2, 458834, 327680, 2, 524370, 327680, 2, 589906, 327680, 2, 393299, 327680, 2, 458835, 327680, 2, 524371, 327680, 2, 589907, 327680, 2, 393300, 327680, 2, 458836, 327680, 2, 524372, 327680, 2, 589908, 327680, 2, 393301, 327680, 2, 458837, 327680, 2, 524373, 327680, 2, 589909, 327680, 2, 393302, 327680, 2, 458838, 327680, 2, 524374, 327680, 2, 589910, 327680, 2, 1572962, 65536, 0, 1572963, 131072, 0, 1572964, 196608, 0, 1114211, 65536, 0, 1114212, 196608, 0, 589925, 65536, 0, 589926, 196608, 0)

[node name="Room1" type="Node2D" parent="."]
position = Vector2(-16, 536)

[node name="Elevator" parent="Room1" instance=ExtResource("5_7c6rg")]
position = Vector2(289, -710)

[node name="Corde bleu" parent="Room1" instance=ExtResource("13_70iun")]
position = Vector2(512, -708)

[node name="Corde_jaune" parent="Room1" instance=ExtResource("11_aiq7b")]
position = Vector2(387, -454)

[node name="Corde bleu2" parent="Room1" instance=ExtResource("13_70iun")]
position = Vector2(897, -744)

[node name="Elevator2" parent="Room1" instance=ExtResource("8_7wuc2")]
position = Vector2(1162, -951)

[node name="Room2" type="Node2D" parent="."]
position = Vector2(-16, 536)

[node name="Player" parent="." instance=ExtResource("17_2v53c")]
position = Vector2(-37, 606)

[node name="jump_AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("18_wlw1h")

[node name="death_AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("19_j1ibn")

[node name="Credit" parent="." instance=ExtResource("21_mws3c")]
visible = false
offset_left = -99.0
offset_top = 46.0
offset_right = -99.0
offset_bottom = 46.0

[node name="Button2" type="Button" parent="Credit"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 1409.0
offset_right = 125.0
offset_bottom = 1440.0
grow_vertical = 0
text = "Return to main"

[node name="checkpoint" parent="." instance=ExtResource("15_y23jr")]
position = Vector2(1158, 306)

[node name="Corde_jaune" parent="." instance=ExtResource("11_aiq7b")]
position = Vector2(1132, -127)

[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="trigger_chkpt" from="checkpoint" to="PlayerStartPosition" method="triggered_checkpoint"]
